doc: update